使用 Colaboratory 建立

--- a/2023_02_15_OpenAI_DALL･E.ipynb
+++ b/2023_02_15_OpenAI_DALL･E.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ccwu0918/openai-colab/blob/main/2023_02_15_OpenAI_DALL%EF%BD%A5E.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -115,7 +126,7 @@
         },
         "outputId": "6184da0c-388c-43a0-d87d-a080b0dc5187"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +149,7 @@
         "id": "4U8QQvYL2OAo",
         "outputId": "64071f13-916c-48d8-8b6e-d85ec44590e8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +210,7 @@
       "metadata": {
         "id": "mI0VFI_eksbb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +249,7 @@
       "metadata": {
         "id": "vTJK2nlVk-9Q"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     }
   ]
